--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .page-link {
+    color: black !important;
+    background-color: #DC4C64 !important;
+    border-color: black !important;
+    box-shadow: 0 1px 1px #141414 inset, 0 0 8px rgba(251, 195, 40, 0.6) !important;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .form-control:focus {
+    border-color: #DC4C64 !important;
+    box-shadow: 0 1px 1px #DC4C64 inset, 0 0 8px rgba(251, 195, 40, 0.6) !important;
   }
-  to {
-    transform: rotate(360deg);
+
+  .card {
+    width: 180px;
+    height: 280px;
+    border: solid red 1px
   }
-}
+
+  body{
+    background-color: #EEE8AA;
+  }
